--- a/Lab3/.vscode/tasks.json
+++ b/Lab3/.vscode/tasks.json
@@ -12,7 +12,7 @@
         "problemMatcher": []
       },
       {
-        "label": "Launch Backend",
+        "label": "Launch Backend (MacOs)",
         "type": "shell",
         "command": "cd backend && npx nodemon server.js",
         "presentation": {
@@ -22,9 +22,29 @@
         "problemMatcher": []
       },
       {
-        "label": "Launch Frontend",
+        "label": "Launch Frontend (MacOs)",
         "type": "shell",
         "command": "cd frontend && npm start",
+        "presentation": {
+          "panel": "dedicated",
+          "showReuseMessage": false
+        },
+        "problemMatcher": []
+      },
+      {
+        "label": "Launch Backend (Windows)",
+        "type": "shell",
+        "command": "cd backend; npx nodemon server.js",
+        "presentation": {
+          "panel": "dedicated",
+          "showReuseMessage": false
+        },
+        "problemMatcher": []
+      },
+      {
+        "label": "Launch Frontend (Windows)",
+        "type": "shell",
+        "command": "cd frontend; npm start",
         "presentation": {
           "panel": "dedicated",
           "showReuseMessage": false
